--- a/examples/svgtree.html
+++ b/examples/svgtree.html
@@ -15,7 +15,7 @@
 		tree.renderTree({
 			title:'FrontEnd',
 			children:[{
-				title:'基础知识',
+				title:'Basic',
 				children:[{
 					title:'HTML',
 					children:[{
