--- a/examples/svgtree.html
+++ b/examples/svgtree.html
@@ -12,158 +12,46 @@
 			width:1200,
 			height:700
 		});
-		tree.renderTree({
-			title:'FrontEnd',
-			children:[{
-				title:'Basic',
-				children:[{
-					title:'HTML',
-					children:[{
-						title:'版本',
-						children:[{
-							title:'HTML 4'
-						},{
-							title:'XHTML'
-						},{
-							title:'HTML 5'
-						}]
-					},{
-						title:'语法'
-					},{
-						title:'标签',
-						children:[{
-							title:'base'
-						},{
-							title:'head'
-						},{
-							title:'body'
-						},{
-							title:'html'
-						},{
-							title:'div'
-						}]
-					},{
-						title:'属性'
-					}]
-				},{
-					title:'CSS',
-					children:[{
-						title:'语法'
-					},{
-						title:'选择器'
-					},{
-						title:'层叠特性（优先级）'
-					},{
-						title:'样式属性'
-					},{
-						title:'布局属性'
-					},{
-						title:'布局方案'
-					},{
-						title:'hack'
-					}]
-				},{
-					title:'JavaScript',
-					children:[{
-						title:'语法'
-					},{
-						title:'数据类型',
-						children:[{
-							title:'原始类型'
-						},{
-							title:'数组'
-						},{
-							title:'对象'
-						},{
-							title:'函数'
-						},{
-							title:'正则表达式'
-						},{
-							title:'TypedArray'
-						}]
-					},{
-						title:'数据操作'
-					},{
-						title:'闭包'
-					},{
-						title:'异步回调'
-					},{
-						title:'代码组织',
-						children:[{
-							title:'命名空间'
-						},{
-							title:'模块化'
-						},{
-							title:'MVC/MVVM'
-						}]
-					},{
-						title:'模式',
-						children:[{
-							title:'最佳实践'
-						},{
-							title:'设计模式'
-						}]
-					}]
-				}]
-			},{
-				title:'专题',
-				children:[{
-						title:'版本',
-						children:[{
-							title:'HTML 4'
-						},{
-							title:'XHTML'
-						},{
-							title:'HTML 5'
-						}]
-					},{
-						title:'语法'
-					},{
-						title:'标签',
-						children:[{
-							title:'base'
-						},{
-							title:'head'
-						},{
-							title:'body'
-						},{
-							title:'html'
-						},{
-							title:'div'
-						}]
-					},{
-						title:'属性'
-					}]
-			},{
-				title:'安全',
-				children:[{
-						title:'版本',
-						children:[{
-							title:'HTML 4'
-						},{
-							title:'XHTML'
-						},{
-							title:'HTML 5'
-						}]
-					},{
-						title:'语法'
-					},{
-						title:'标签',
-						children:[{
-							title:'base'
-						},{
-							title:'head'
-						},{
-							title:'body'
-						},{
-							title:'html'
-						},{
-							title:'div'
-						}]
-					},{
-						title:'属性'
-					}]
-			}]
+		tree.renderTree({title:'Links',
+			children:[
+				{title:'Frontend', children:[
+					{title: 'HTML/HTML5'},
+					{title: 'Styles', children:[
+						{ title: "CSS"},
+						{ title: "SASS/SCSS" },
+						{ title: "LESS" },
+					]},
+					{title: 'JS'},
+					{title: 'TS'},
+					{title: 'PHP'},
+					{title: 'Frameworks', children:[
+						{title: 'React'},
+						{title: 'Vue'},
+						{title: 'Angular', children: [
+							{title: 'AngularJS'},
+							{title: 'Angular2.0'}
+						]},		
+					]},
+				]},
+				{title:'Backend'},
+				{title:'Design', children: [
+					{title: 'Fonts'}
+
+				]},
+				{title:'Code styles'},
+				{title:'English'},
+				{title:'Interview'},
+				{title:'Computer science', children:[
+					{ title:'Algorithms'},
+					{ title:'Structures'},
+				]},
+				{title:'Tools', children: [
+					{title: 'Browser extenssions'},
+					{title: 'VS code extenssions'},
+					{title: 'Converters'},
+					{title: 'Formaters'},
+				]},
+			]
 		});
 	</script>
 </body>
